# aza-clerk

./: Cargo.toml
src/: main.rs
src/http/: account.rs  mod.rs  server.rs  transfer.rs
src/http/response/: mod.rs  response.rs
src/logic/: db.rs  foreign_exchange.rs  get_account_balance.rs  get_transaction_history.rs  mod.rs  sql_procedures.rs  sql_utils.rs  top_up.rs  transfer.rs  uuid_string.rs
src/models/: account.rs  amount.rs  init.rs  ledger.rs  mod.rs  transaction.rs
