[package]
name = "aza-clerk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
short-uuid = "0.2.1"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "mysql", "macros", "mysql-rsa", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["catch-panic"] }
